[package]
name = "cache_extractor"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "cache-extractor"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
infer = "0.5.0"
rand = "0.8.4"
clap = "3.0.0-beta.2"