[package]
name = "cache_extractor"
version = "1.0.1"
edition = "2018"

[[bin]]
name = "cache-extractor"
path = "src/main.rs"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
dirs = "3.0.2"
infer = "0.5.0"
rand = "0.8.4"
clap = "3.0.0-beta.2"
regex = "1.5.4"
indicatif = "0.16.2"